# second-brain-bedrock-aws

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  claude.md  pyproject.toml
bedrock/: .bedrock_agentcore.yaml  Dockerfile  README.md  __init__.py  agents.md  app.py  pyproject.toml
bedrock/agents/: __init__.py
bedrock/mcp/lambda/: handler.py
bedrock/src/: main.py
bedrock/src/mcp_client/: client.py
bedrock/src/model/: load.py
bedrock/test/: test_main.py
cdk/: .gitignore  .prettierignore  README.md  __init__.py  app.py  cdk.json  package.json  tsconfig.json
cdk/lambda/: README.md
cdk/lambda/message_handler/: index.py  requirements.txt
cdk/lambda/processor/: index.py
cdk/lib/constructs/: agent-core.ts  bedrock-agent-docker-image.ts  lambda-layer.ts  second-brain-app.ts  second-brain-storage.ts
cdk/lib/stacks/: second-brain-stack.ts
cdk/src/: index.ts
cdk/src/stacks/: application-stack.ts  database-stack.ts  index.ts  storage-stack.ts
cdk/stacks/: __init__.py  database.py  storage.py
doc/: ARCHITECTURE.md
lib/python/examples/: message_handler_lambda.py  processing_lambda.py  test_models.py
lib/python/second_brain_core/: __init__.py  constants.py  dynamodb.py  models.py
scripts/: __init__.py  deploy.py  setup_telegram.py  utils.py
tests/: test_bedrock_app.py  test_scripts_utils.py
