[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "packages/shared",
    "packages/bedrock",
    "packages/lambda",
    "packages/scripts",
    "packages/tests",
]

[tool.uv.sources]
sb-shared = { workspace = true }
sb-bedrock = { workspace = true }
sb-lambda = { workspace = true }
sb-scripts = { workspace = true }
sb-tests = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=3.3.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "isort>=5.13.0",
    "detect-secrets>=1.4.0",
    "mdformat>=0.7.0",
    "mdformat-gfm>=0.3.0",
    "pydocstyle>=6.3.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pydocstyle]
#convention = "google"
ignore = ["D212", "D415", "D405"]
match = "(?!test_).*\\.py"

[tool.mdformat]
number = false
wrap = 100
